--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </span>
         <span class="button__text">Сохранить на память</span>
       </button>
-      <dialog id="dialog-id" class="dialog_window" open>
+      <dialog id="dialog-id" class="dialog_window">
         <div class="dialog_text">
           <div class="svg_wrapper">
             <svg class="floppy-icon"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39 39">
