--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="mainTitle">&lt;&frasl;html&gt;</h1>
-      <h2 class="discriptionTitle">закрывающий тег</h2>
+      <h1 class="main_title">&lt;&frasl;html&gt;</h1>
+      <h2 class="discription_title">закрывающий тег</h2>
     </header>
     <main class="main">
       <article class="card">
-        <h3 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h3>
+        <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
         <div class="card__img-wrapper">
           <span class="card__img-lable">&lt;&frasl;html&gt;</span>
           <img class="card__img" src="./images/van.png" alt="фургон">
@@ -29,8 +29,8 @@
           <p class="card__paragraph">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
           <p class="card__paragraph">Место для ваших воспоминаний о начале обучения.</p>
           <div class="buttons">
-            <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+            <button class="card__icon-button" type="button">     
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -41,14 +41,14 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
       <article class="card">
-        <h3 class="card__title">1 спринт: Я — чистый лист</h3>
+        <h2 class="card__title">1 спринт: Я — чистый лист</h2>
         <div class="card__img-wrapper">
           <img class="card__img filter_grayscale" src="./images/van.png" alt="фургон">
           <span class="card__img-lable">&lt;&frasl;html&gt;</span>
@@ -56,9 +56,9 @@
         <div class="card__text">
           <p class="card__paragraph">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
           <p class="card__paragraph">Место для ваших воспоминаний о начале первого спринта.</p>
-          <div class="buttons">
+          <div class="buttons" type="button">
             <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -69,14 +69,14 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
       <article class="card">
-        <h3 class="card__title">1 спринт: А если не получится?</h3>
+        <h2 class="card__title">1 спринт: А если не получится?</h2>
         <div class="card__img-wrapper">
           <img class="card__img filter_saturate" src="./images/van.png" alt="фургон">
           <span class="card__img-lable">&lt;css&gt;</span>
@@ -85,8 +85,8 @@
           <p class="card__paragraph">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
           <p class="card__paragraph">Место для ваших воспоминаний об окончании первого спринта</p>
           <div class="buttons">
-            <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+            <button class="card__icon-button" type="button">     
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -97,14 +97,14 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
       <article class="card">
-        <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
+        <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
         <div class="card__img-wrapper">
           <img class="card__img filter_hue-rotate" src="./images/van.png" alt="фургон">
           <span class="card__img-lable">&lt;desigions&gt;</span>
@@ -113,8 +113,8 @@
           <p class="card__paragraph">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.</p>
           <p class="card__paragraph">Место для ваших воспоминаний о начале второго спринта.</p>
           <div class="buttons">
-            <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+            <button class="card__icon-button" type="button">     
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -125,14 +125,14 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
       <article class="card">
-        <h3 class="card__title">2 спринт: О тех, кто рядом</h3>
+        <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
         <div class="card__img-wrapper">
           <img class="card__img filter_invert" src="./images/van.png" alt="фургон">
           <span class="card__img-lable">care</span>
@@ -141,8 +141,8 @@
           <p class="card__paragraph">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?</p>
           <p class="card__paragraph">Место для ваших воспоминаний об окончании второго спринта.</p>
           <div class="buttons">
-            <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+            <button class="card__icon-button" type="button">     
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -153,14 +153,14 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
       <article class="card">
-        <h3 class="card__title">3 спринт: Обходные стратегии</h3>
+        <h2 class="card__title">3 спринт: Обходные стратегии</h2>
         <div class="card__img-wrapper">
           <img class="card__img filter_sepia" src="./images/van.png" alt="фургон">
           <span class="card__img-lable">&lt;support&gt;</span>
@@ -169,8 +169,8 @@
           <p class="card__paragraph">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
           <p class="card__paragraph">Место для ваших воспоминаний о начале третьего спринта.</p>
           <div class="buttons">
-            <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+            <button class="card__icon-button" type="button">     
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -181,14 +181,14 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
       <article class="card">
-        <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
+        <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
         <div class="card__img-wrapper">
           <img class="card__img filter_blur" src="./images/van.png" alt="фургон">
           <span class="card__img-lable">&lt;lifes-style: none;&gt;</span>
@@ -197,8 +197,8 @@
           <p class="card__paragraph">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
           <p class="card__paragraph">Место для ваших воспоминаний об окончании третьего спринта</p>
           <div class="buttons">
-            <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+            <button class="card__icon-button" type="button">     
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -209,14 +209,14 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
       <article class="card">
-        <h3 class="card__title">«Сейчас я здесь»</h3>
+        <h2 class="card__title">«Сейчас я здесь»</h2>
         <div class="card__img-wrapper">
           <img class="card__img filter_mix" src="./images/van.png" alt="фургон">
           <span class="card__img-lable">&lt;&frasl;experience&gt;</span>
@@ -225,8 +225,8 @@
           <p class="card__paragraph">Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.</p>
           <p class="card__paragraph">Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
           <div class="buttons">
-            <button class="card__icon-button">     
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon">
+            <button class="card__icon-button" type="button">     
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
                     <path class="contour" fill="var(--heart-counter-color)" d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"/>
@@ -237,39 +237,37 @@
                 </g>
               </svg>
             </button>
-            <button class="card__like-button">     
+            <button class="button card__like-button" type="button">     
               <span class="button__text">Like</span>
             </button>
           </div>
         </div>
       </article>
-    </main>
-    <footer class="footer">
-      <button class="footer__save-button" type="button" 
-      onclick="window['dialog-id'].showModal()" 
-      aria-controls="dialog-id">
-        <span class="svg_wrapper">
-          <svg class="floppy-icon"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39 39">
-            <use href="images/sprite.svg#floppy" />
-          </svg>
-        </span>
-        <span class="button__text">Сохранить на память</span>
-      </button>
-      <dialog id="dialog-id" class="dialog_window">
-        <div class="dialog_text">
-          <div class="svg_wrapper">
+      <div class="footer">
+        <button class="button footer__save-button" type="button" onclick="window['dialog-id'].showModal()" aria-controls="dialog-id">
+          <span class="svg_wrapper">
             <svg class="floppy-icon"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39 39">
               <use href="images/sprite.svg#floppy" />
             </svg>
-          </div> 
-          <span >Вставьте дискету, чтобы продолжить</span>
-        </div>
-        <form>
-            <button class="dialog__save-button" type="button" 
-            onclick="window['dialog-id'].close()">ок</button>
-        </form>
-      </dialog>
-    </footer>
+          </span>
+          <span class="button__text">Сохранить на память</span>
+        </button>
+        <dialog id="dialog-id" class="dialog_window">
+          <div class="dialog_text">
+            <div class="svg_wrapper">
+              <svg class="floppy-icon"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39 39">
+                <use href="images/sprite.svg#floppy" />
+              </svg>
+            </div> 
+            <p>Вставьте дискету, чтобы продолжить</p>
+          </div>
+          <form>
+              <button class="button dialog__save-button" type="submit" 
+              onclick="window['dialog-id'].close()"><span class="button__text">ок</span></button>
+          </form>
+        </dialog>
+      </div>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
