--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="card__text">
           <p class="card__paragraph">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
           <p class="card__paragraph">Место для ваших воспоминаний о начале первого спринта.</p>
-          <div class="buttons" type="button">
-            <button class="card__icon-button">     
+          <div class="buttons">
+            <button class="card__icon-button" type="button">     
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 39 36" class="like-icon" aria-hidden="true">
                 <g clip-path="url(#a)">
                   <g class="heart">
